<resources>
    <string name="app_name">MarketPlace</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <string name="similar_products">Similar Products</string>
    <string name="Contact_Seller">Contact Seller</string>
    <string name="Buy">Buy</string>
    <string name="Profile">Profile</string>

    <!--Change Password-->

    <string name="Change_Password">Change Password</string>
    <string name="Current_Password">Current Password</string>
    <string name="New_Password">New Password</string>
    <string name="Retype_New_Password">Retype New Password</string>

    <!--Forgot Password-->
    <string name="Forgot_Password">Forgot Password</string>
    <string name="ContactNumber">Contact Number</string>
    <string name="Send">Send </string>
    <string name="Back_To_Login">Back To Login</string>


    <!--History-->
    <string name="My_Products">My Products</string>

    <!--Login-->
    <string name="Login">Login</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="Password">Password</string>
    <string name="Forgot_Password_login">Forgot Password?</string>
    <string name="OR">OR</string>
    <string name="New_User">New User? Register here</string>

    <!--Profile-->

    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Logout">Logout</string>


    <!--Registration-->
    <string name="Registration">Registration</string>
    <string name="Name">Name</string>
    <string name="Contact_Number">Contact Number</string>
    <string name="Date_of_Birth">Date of Birth:</string>

    <!--Sell Details-->
    <string name="Product_Details"> Product Details</string>
    <string name="Select_Category">  Select Category</string>
    <string name="Product_Name">  Product Name</string>
    <string name="Product_Description">Product Description</string>
    <string name="Product_Price">Product Price</string>
    <string name="Upload">Upload</string>


    <!--Sell Form-->
    <string name="Upload_Product_Images">Upload Product Images</string>
    <string name="Continue">Continue</string>


    <!--exit Dialog-->
    <string name="Do_You_want_to_Exit">Do You want to Exit?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>


    <!--Seller Details-->
    <string name="Sellers_contact_number">Seller\'s contact number</string>
    <string name="OK">OK</string>

    <!--Language selection screen-->

    <string name="Please_select_Language">Please select Language </string>


    <!--Sidebar Navigation-->
    <string name="Change_Language">Change Language</string>
    <string name="Contract">Contract Farming</string>
    <string name="About_Us">About Us</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="About_KU">About KU</string>

    <string-array name="menu">
        <item>My Products</item>
        <item>Change Language</item>
        <item>About Us</item>
        <item>Contact Us</item>
        <item>About KU</item>
    </string-array>


    <!--Toast msg image-->
    <string name="image_toast">Please upload atleast one image.</string>
    <string name="toast_contract">Enter All Fields.</string>
    <string name="currency">INR</string>



    <!--contract form-->
    <string name="Contract_Form">Contract Farming</string>
    <string name="Contract_Name">Name</string>
    <string name="Contract_Address">Address</string>
    <string name="Contract_Phone_Number">Phone Number</string>
    <string name="Contract_Mobile_Number">Mobile Number</string>
    <string name="District">District</string>
    <string name="Taluka">Taluka</string>
    <string name="Village">Village</string>
    <string name="Survey_No">Survey No</string>
    <string name="Area_of_Farm_in_Hector">Area of Farm in Hector</string>
    <string name="Name_of_Comodity">Name of Comodity</string>
    <string name="Expectation_Price_for_Hector">Expectation Price for Hector</string>
    <string name="Submit">Submit</string>


</resources>
