<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--    <View
        android:layout_width="match_parent"
        android:background="@color/colorBlack"
        android:layout_height="2dp"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Profile"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:layout_margin="10dp"
            />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/colorBlack"
        android:layout_height="1dp"/>
    <!-- TODO: Update blank fragment layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_alignParentRight="true"
                android:layout_margin="15dp"
                android:id="@+id/edit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_edit"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/profile_pic"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:padding="3dp"
                />
            </LinearLayout>
        </RelativeLayout>



<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text=""
    android:textColor="@color/colorBlack"
    android:textSize="15dp"
    android:id="@+id/name"
    android:layout_margin="10dp"
    />
        <EditText
            android:textColor="@color/colorBlack"
            android:id="@+id/cnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:focusable="false"
            android:textSize="15dp"
            android:layout_margin="10dp"
            />

        <EditText
android:visibility="gone"
        android:textColor="@color/colorBlack"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="sagar.patel@gmail.com"
        android:textSize="15dp"
        android:layout_margin="10dp"
        />
        <TextView
            android:id="@+id/bdate"
            android:textColor="@color/colorBlack"

            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date Of Birth"
        android:textSize="15dp"
        android:layout_margin="15dp"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/colorBlack"
            android:text="@string/Gender"
            android:textColor="@color/colorBlack"
            android:textSize="15dp" />
        <RadioGroup

            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorBlack"
                android:checked="true"
                android:text="@string/Male"
                android:textColor="@color/colorBlack" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorBlack"
                android:buttonTint="@color/colorBlack"
                android:text="@string/Female"
                android:textColor="@color/colorBlack" />
        </RadioGroup>

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
<!--
        <Button
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->
            <Button
                android:layout_margin="5dp"
                android:text="@string/Logout"
                android:layout_weight="1"
                android:textAlignment="viewStart"
                android:textColor="@android:color/holo_red_dark"
                android:background="#00000000"
                android:textAllCaps="false"
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_margin="5dp"
                android:text="@string/Change_Password"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/holo_blue_dark"
                android:id="@+id/change_pwd"
                android:background="#00000000"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
       <!-- <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="edit"
            android:layout_margin="20dp"
            android:id="@+id/edit"
            android:textSize="20dp"

            android:textColor="@color/colorBlack"
            android:background="@drawable/gradient"
            />-->
    </LinearLayout>
</ScrollView>
